<resources>
    <string name="app_name">Travelling</string>
    <string name="connection_error">Connection Error :(</string>
    <string name="loading">Loading…</string>
    <string name="country_quiz">%1$s Quiz</string>
    <string name="submit">Submit</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect. %1$s was the correct answer</string>
    <string name="please_select_an_answer">Please select an answer</string>
    <string name="score">Score: %1$s</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="plus_one">Plus One</string>
    <string name="reset">Reset</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="timer_icon">timer icon</string>
    <string name="remove_all">Remove ALl</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="translator_image">Translator Image</string>
    <string name="translator">Translator</string>
    <string name="quiz">Quiz</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="map_image">Map Image</string>
    <string name="map">Map</string>
    <string name="pop_phrases">Some popular phrases</string>
    <string name="type_your_word">Type your word here…</string>
    <string name="translate">Translate</string>
    <string name="tts">Play</string>
</resources>